  24 Sep 2015; Poncho <poncho@spahan.ch>
  +files/icons/hicolor_apps_16x16_gnome-calendar.png,
  +files/icons/hicolor_apps_22x22_gnome-calendar.png,
  +files/icons/hicolor_apps_24x24_gnome-calendar.png,
  +files/icons/hicolor_apps_256x256_gnome-calendar.png,
  +files/icons/hicolor_apps_32x32_gnome-calendar.png,
  +files/icons/hicolor_apps_48x48_gnome-calendar.png,
  +files/icons/hicolor_apps_512x512_gnome-calendar.png, california-0.4.0.ebuild:
  gnome-extra/california: add better icons

*california-0.4.0 (27 Jul 2015)

  27 Jul 2015; Poncho <poncho@spahan.ch> +california-0.4.0.ebuild,
  +files/california-0.4-gnome-3.16.patch, +metadata.xml:
  gnome-extra/california: import from gnome overlay  add evolution patch