@@ -1,5 +1,19 @@
+From 4b61966a93e7be65ed35e8a509e2b7538b136c3c Mon Sep 17 00:00:00 2001
+From: Adam Dingle <adam@medovina.org>
+Date: Thu, 24 Mar 2016 12:35:04 -0400
+Subject: Fix build with newer evolution-data-server: bug 743961
+
+Thanks to Milan Crha <mcrha@redhat.com> for this fix.
+
+https://bugzilla.gnome.org/show_bug.cgi?id=743961
+---
+ configure.ac                                     | 2 +-
+ src/backing/eds/backing-eds-calendar-source.vala | 2 +-
+ vapi/libecal-1.2.vapi                            | 2 +-
+ 3 files changed, 3 insertions(+), 3 deletions(-)
+
 diff --git a/configure.ac b/configure.ac
-index 8a94642..1ca6426 100644
+index 0e224f3..933ae51 100644
 --- a/configure.ac
 +++ b/configure.ac
 @@ -27,7 +27,7 @@ AC_SUBST(LDFLAGS)
@@ -12,7 +26,7 @@ index 8a94642..1ca6426 100644
  GDATA_REQUIRED=0.14.0
  GOA_REQUIRED=3.8.3
 diff --git a/src/backing/eds/backing-eds-calendar-source.vala b/src/backing/eds/backing-eds-calendar-source.vala
-index ee6a572..5009b5d 100644
+index 7e30e08..da88db4 100644
 --- a/src/backing/eds/backing-eds-calendar-source.vala
 +++ b/src/backing/eds/backing-eds-calendar-source.vala
 @@ -256,7 +256,7 @@ internal class EdsCalendarSource : CalendarSource {
@@ -37,3 +51,6 @@ index 6ead3ec..46fd711 100644
  		public static unowned E.Client connect_sync (E.Source source, E.CalClientSourceType source_type, GLib.Cancellable cancellable) throws GLib.Error;
  		[CCode (finish_name = "e_cal_client_create_object_finish")]
  		public async void create_object (iCal.icalcomponent icalcomp, GLib.Cancellable? cancellable, out string out_uid) throws GLib.Error;
+-- 
+cgit v0.12
+
